discussion/kv_engine/168009/168009_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Test Clang-tidy fix

Change-Id: I5a570e02ea8977040ec70d7987b4e189bffaeb8c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-12-21 16:21:25.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-12-21 16:41:24.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14609/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include <spdlog/logger.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14609/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14609/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24663/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24663/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36066/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13439/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42551/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4249/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16547/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17329/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16255/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15409/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4307/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
